crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__word-timing-tier.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "pid": "11312/a-00098425-0",
        "type": "pid"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Father",
            "speaker_code": "FAT"
          },
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Investigator",
            "speaker_code": "OBS"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "EHS",
        "language": "eng",
        "role": "Father",
        "sex": "male",
        "speaker": "FAT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "5;07.11",
        "corpus": "EHS",
        "language": "eng",
        "role": "Target_Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "EHS",
        "language": "eng",
        "role": "Investigator",
        "sex": "female",
        "speaker": "OBS",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "EHS",
        "language": "eng",
        "role": "Mother",
        "sex": "female",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "28-AUG-2002",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "bullet": null,
            "items": [
              {
                "content": [
                  {
                    "content": "no",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 64125,
                  "start_ms": 64085
                },
                "kind": "word",
                "raw_text": "no",
                "span": {
                  "end": 371,
                  "start": 369
                }
              },
              {
                "content": [
                  {
                    "content": "that",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 64225,
                  "start_ms": 64125
                },
                "kind": "word",
                "raw_text": "that",
                "span": {
                  "end": 390,
                  "start": 386
                }
              },
              {
                "content": [
                  {
                    "content": "ain't",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 64385,
                  "start_ms": 64265
                },
                "kind": "word",
                "raw_text": "ain't",
                "span": {
                  "end": 410,
                  "start": 405
                }
              },
              {
                "content": [
                  {
                    "content": "gonna",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 64585,
                  "start_ms": 64385
                },
                "kind": "word",
                "raw_text": "gonna",
                "span": {
                  "end": 430,
                  "start": 425
                }
              },
              {
                "content": [
                  {
                    "content": "help",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 64766,
                  "start_ms": 64605
                },
                "kind": "word",
                "raw_text": "help",
                "span": {
                  "end": 449,
                  "start": 445
                }
              },
              {
                "content": [
                  {
                    "content": "you",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 65306,
                  "start_ms": 64806
                },
                "kind": "word",
                "raw_text": "you",
                "span": {
                  "end": 467,
                  "start": 464
                }
              }
            ],
            "language_code": null,
            "terminator": {
              "type": "period"
            }
          },
          "type": "Wor"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 65306,
            "start_ms": 64085
          },
          "content": [
            {
              "content": [
                {
                  "content": "no",
                  "type": "text"
                }
              ],
              "raw_text": "no",
              "span": {
                "end": 320,
                "start": 318
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "that",
                  "type": "text"
                }
              ],
              "raw_text": "that",
              "span": {
                "end": 325,
                "start": 321
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "ain't",
                  "type": "text"
                }
              ],
              "raw_text": "ain't",
              "span": {
                "end": 331,
                "start": 326
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "gonna",
                  "type": "text"
                }
              ],
              "raw_text": "gonna",
              "span": {
                "end": 337,
                "start": 332
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "help",
                  "type": "text"
                }
              ],
              "raw_text": "help",
              "span": {
                "end": 342,
                "start": 338
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "span": {
                "end": 346,
                "start": 343
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "FAT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "5;07.11",
        "corpus": "EHS",
        "language": "eng",
        "role": "Target_Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    },
    "FAT": {
      "birth_date": null,
      "code": "FAT",
      "id": {
        "corpus": "EHS",
        "language": "eng",
        "role": "Father",
        "sex": "male",
        "speaker": "FAT"
      },
      "name": null,
      "role": "Father"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "EHS",
        "language": "eng",
        "role": "Mother",
        "sex": "female",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    },
    "OBS": {
      "birth_date": null,
      "code": "OBS",
      "id": {
        "corpus": "EHS",
        "language": "eng",
        "role": "Investigator",
        "sex": "female",
        "speaker": "OBS"
      },
      "name": null,
      "role": "Investigator"
    }
  }
}
